--- a/public/index.html
+++ b/public/index.html
@@ -28,21 +28,23 @@
 
 	<!-- <SCRIPT language="Javascript" type="text/javascript">
 	function doSubmit( event , FocusObject) {
-		var keyCode2 = (window.Event) ? event.which : event.keyCode;
-		var keyCode1 = (window.Event) ? event.keyCode : event.which;
+		const keyCode2 = (window.Event) ? event.which : event.keyCode;
+		const keyCode1 = (window.Event) ? event.keyCode : event.which;
 		if( keyCode1 == 13 || keyCode2 == 13 ) { WriteText(FocusObject); return false; }
 	}
 	</SCRIPT> -->
-
+	<script src='./secrets.js' type="module"></script>
 </head>
 <body>
 
 <div id='map'></div>
 
-<script src=''></script>
+
 <script type="module">
-	import { secrets } from '../secrets'
-	var greenEgg = L.icon({
+	import  { secrets } from '/secrets.js';
+	console.log('secrets: ',secrets);
+	console.log('secrets: ',secrets.mapbox_API_key);
+	const greenEgg = L.icon({
 		iconUrl: 'node_modules/leaflet/dist/images/marker-icon.png',
 		shadowUrl: 'node_modules/leaflet/dist/images/marker-shadow.png',
 
@@ -54,7 +56,7 @@
 		tooltipAnchor: [10, -20]
 	});
 
-		var redEgg = L.icon({
+		const redEgg = L.icon({
 		iconUrl: 'node_modules/leaflet/dist/images/marker-icon.png',
 		shadowUrl: 'node_modules/leaflet/dist/images/marker-shadow.png',
 
@@ -66,33 +68,33 @@
 		tooltipAnchor: [10, -20]
 	});
 
-	var Regular = L.layerGroup();
+	const Regular = L.layerGroup();
 	// <?php echo $StopMarkers_Regular; ?>
 	L.marker([0,0],{opacity: 1.0}).bindPopup('TEST').addTo(Regular);
 
-	var Active = L.layerGroup();
+	const Active = L.layerGroup();
 	// <?php echo $StopMarkers_Active; ?>
 	L.marker([0,0],{opacity: 1.0}).bindPopup('TEST').addTo(Active);
 
 
-	var mbAttr = '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors'
-		mbUrl = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoiam9lZGloIiwiYSI6ImNqanNzaGVyZTFhbmIzcW1hOWVya25uemsifQ.QhKEnOJanad8c-KyJQDG2A';
+	const mbAttr = '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
+		mbUrl = `https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=${secrets.mapbox_API_key}`;
 
-	var grayscale   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr}),
+	const grayscale   = L.tileLayer(mbUrl, {id: 'mapbox.light', attribution: mbAttr}),
 		streets  = L.tileLayer(mbUrl, {id: 'mapbox.streets',   attribution: mbAttr});
 
-	var map = L.map('map', {
+	const map = L.map('map', {
 		center: [36.1497012,-86.8144697],
 		zoom: 15,
 		layers: [streets, Active, Regular]
 	});
 
-	var baseLayers = {
+	const baseLayers = {
 		"Grayscale": grayscale,
 		"Streets": streets
 	};
 
-	var overlays = {
+	const overlays = {
 		"Active Study": Active,
 		"Inactive": Regular
 	};
@@ -104,8 +106,7 @@
 	L.control.layers(baseLayers, overlays).addTo(map);
 	// L.marker([36.150249,-86.8128233]).addTo(Active);
 	// L.marker([36.149596, -86.811927]).addTo(Regular);
-</script>
-<script>
+
 	const pokestops = [
 		{latitude: 36.150400123879905, longitude: -86.81216620062756, name: "Centennial Exposition Plaque", id: 1},
 		{latitude: 36.149618, longitude: -86.812215, name: "Butterfly Planter", id: 2},
@@ -118,6 +119,8 @@
 		.addTo(Regular);
 	});
 </script>
+
+
 <FORM NAME="form" action="index.php" method="post">
 	<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="0">
 	<TR><TD VALIGN="MIDDLE">
