--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 	}
 	</SCRIPT> -->
 	<script src='./secrets.js' type="module"></script>
+	<script src='./getPokestops.js' type="module"></script>
 </head>
 <body>
 
