--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 	</SCRIPT> -->
 	<script src='./secrets.js' type="module"></script>
 	<script src='./getPokestops.js' type="module"></script>
+	<script src='./getCurrentDate.js' type="module"></script>
 </head>
 <body>
 
