converted my getPokestops function and created my server endpoint for getting all pokestops from the database on pageload. im stoked!

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 	<input type="text" placeholder="name" id="add-new-pokestop-name">
 	<input type="number" placeholder="latitude" id="add-new-pokestop-latitude">
 	<input type="number" placeholder="longitude" id="add-new-pokestop-longitude">
-	<input type="submit" value="submit" class="add-new-pokestop-button">
+	<input type="submit" value="submit" id="add-new-pokestop-button">
 </form>
 
 
