--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 	<script src='./secrets.js' type="module"></script>
 	<script src='./getPokestops.js' type="module"></script>
 	<script src='./getCurrentDate.js' type="module"></script>
+	<script src='./getTodaysTasks.js' type="module"></script>
 	<script src='./addTask.js' type="module"></script>
 	<script src='./addNewPokestop.js' type="module"></script>
 </head>
