made each of the add-new-pokestop input fields required

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
 
 <label for="add-new-pokestop">Add New Pokestop</label>
 <form method="post" name="add-new-pokestop" id="add-new-pokestop-form">
-	<input type="text" placeholder="name" id="add-new-pokestop-name">
-	<input type="number" placeholder="latitude" id="add-new-pokestop-latitude">
-	<input type="number" placeholder="longitude" id="add-new-pokestop-longitude">
+	<input type="text" placeholder="name" id="add-new-pokestop-name" required>
+	<input type="number" placeholder="latitude" id="add-new-pokestop-latitude" required>
+	<input type="number" placeholder="longitude" id="add-new-pokestop-longitude" required>
 	<input type="submit" value="submit" id="add-new-pokestop-button">
 </form>
 
