--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 	<script src="./node_modules/leaflet/dist/leaflet.js"></script>
 	<script src="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 
 	<style>
 		body {
