--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,15 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<base href="/">
 
 	<link rel="shortcut icon" type="image/x-icon" href="./images/nash-poke-map-favicon.ico" />
 
 	<link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
 	<link rel="stylesheet" href="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.css" />
 
-	<script src="./node_modules/leaflet/dist/leaflet.js"></script>
-	<script src="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
-	<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="application/javascript" src="./node_modules/leaflet/dist/leaflet.js"></script>
+	<script type="application/javascript" src="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
+	<script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
 
 	<style>
 		body {
