added in the public path in the index file

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 	<link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
 	<link rel="stylesheet" href="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.css" />
 
-	<script type="application/javascript" src="./node_modules/leaflet/dist/leaflet.js"></script>
-	<script type="application/javascript" src="./node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
-	<script type="application/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="application/javascript" src="./public/node_modules/leaflet/dist/leaflet.js"></script>
+	<script type="application/javascript" src="./public/node_modules/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
+	<script type="application/javascript" src="./public/node_modules/jquery/dist/jquery.min.js"></script>
 
 	<style>
 		body {
